--- a/index.html
+++ b/index.html
@@ -28,38 +28,52 @@
     </header>
 
     <section id="learn-more" class="py-5">
-        <div class="container">
+        <div class="container1">
             <h2 class="text-center mb-4">Explore Our Services</h2>
-            <div class="row">
-                <div class="col-md-4 feature">
-                    <img src="education-icon.png" alt="Education Icon" class="img-fluid">
-                    <h3>SRH Education</h3>
-                    <p>Access informative articles, videos, and FAQs.</p>
+            <div class="row1">
+                <div class="img">
+                        <img src="./images/barrier controls.jpeg" alt="Barrier Controls Icon" class="img-fluid">
                 </div>
-                <!-- Add similar sections for consultation and product ordering -->
+                <div class="feature">
+                    <h3>Barrier methods</h3>
+                    <p>these methods are use to put prevent spouses ior partners from 
+                        eiher c9ontacting an STI or any sexual intercource diseases and 
+                        prevent ladies from getting pregnant</p>
+                        <button class="btn btn-primary">Learn More</button>
+                </div>
+           
+    </section>
+   
+    <section>
+        <div class="row1">
+            <div class="img">
+                <img src="./images/family planning.jpg" alt="Family Planning Icon" class="img-fluid">
             </div>
-        </div>
+            <div class="feature">
+                <h3>Family Planning</h3>
+                <p>Family planning helps protect women from any health
+                    risks that may occur before, during or after childbirth</p>
+                    <button class="btn btn-primary">Learn More</button>
+            </div>
+    </div>
     </section>
 
-    <section id="testimonials" class="bg-light py-5">
+    <section id="testimonials" class="sec-two">
         <div class="container">
             <h2 class="text-center mb-4">Testimonials</h2>
+            <h6  class="text-center mb-4">We Are Honoured To Serve You!</h6>
             <div class="row">
                     <div class="testimonial">
-                        <p>"This platform changed my life! Highly recommended."</p>
+                        <p>"This platform changed my life! <br><span>Highly recommended."</span></p>
                         <span>- Jane Doe</span>
                     </div>
                     <div class="testimonial">
-                        <p>"I've never seen such a comprehensive SRH resource before. Amazing!"</p>
-                        <span>- John Smith</span><br>
+                        <p>"I've never seen such a comprehensive<br><span>  SRH resource before.Amazing!"</span></p>
+                        <span>- John Smith</span>
                     </div>
                     <div class="testimonial">
-                        <p>"The products available on this platform are top-notch. Great quality!"</p>
+                        <p>"The products available on this platform<br> <span>are top-notch.Great quality!"</span></p>
                         <span>- Sarah Johnson</span>
-                    </div>
-                    <div class="testimonial">
-                        <p>"The products available on this platform are on another level. Great quality!"</p>
-                        <span>- Margret Wambui</span>
                     </div>
             </div>
         </div>
